# data-label-factory

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml  requirements.txt  setup.py  vercel.json
agent-farm/: package-lock.json  package.json  wrangler.toml
agent-farm-think/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
agent-farm-think/src/: index.ts
agent-farm/src/: index.ts
agent-gateway/: .gitignore  ECONOMIC_MODEL.md  README.md  package-lock.json  tsconfig.json  wrangler.toml
agent-gateway/examples/: README.md  simple-agent.ts
agent-gateway/sim/: profitability.ts
agent-gateway/src/: index.ts
api/: index.py
create-agent-gateway/: .gitignore  README.md  package.json
create-agent-gateway/src/: template.ts
data_label_factory/: __init__.py  auto.py  benchmark.py  benchmark_roboflow.py  cli.py  community.py  doc_cluster.py  doc_template.py  experiments.py  export.py  flywheel_docs.py  gather.py  mcp.py  metrics.py  moltbook.py  project.py  serve.py  storage_tokens.py
data_label_factory/identify/: README.md  __init__.py  __main__.py  build_index.py  cli.py  gateway.py  mcp_server.py  scrape_prices.py  serve.py  train.py  verify_index.py  webui.py  webui_mcp.py
data_label_factory/providers/: __init__.py  chandra.py  falcon.py  flywheel.py  gemma.py  liteparse.py  openrouter.py  qwen.py  wilddet3d.py
data_label_factory/runpod/: Dockerfile  README.md  __init__.py  __main__.py  builder.py  cli.py  handler.py  pod_falcon_server.py  requirements-pod.txt  train_handler.py
docs/: x-launch-thread.md
projects/: drones.yaml  stop-signs.yaml
research/: v2-expert-sniper-integration.md
web/: .env.example  middleware.ts  next.config.ts  open-next.config.ts  package-lock.json  package.json  wrangler.jsonc
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  sitemap.ts
web/app/agents/: page.tsx
web/app/api/active-crop/: route.ts
web/app/api/add-hook/: route.ts
web/app/api/add-subtitles/: route.ts
web/app/api/agent/: route.ts
web/app/api/agent-buy/: route.ts
web/app/api/agent-stream/: route.ts
web/app/api/bake-effects/: route.ts
web/app/api/chat/: route.ts
web/app/api/checkout/: route.ts
web/app/api/cluster/: route.ts
web/app/api/communities/: route.ts
web/app/api/community/[slug]/: route.ts
web/app/api/community/auto-post/: route.ts
web/app/api/community/feed/: route.ts
web/app/api/dlf/: route.ts
web/app/api/falcon-frame/: route.ts
web/app/api/gather/: route.ts
web/app/api/health/: route.ts
web/app/api/inspect-url/: route.ts
web/app/api/inspector-chat/: route.ts
web/app/api/jobs/: route.ts
web/app/api/label-path/: route.ts
web/app/api/labels/: route.ts
web/app/api/moltbook/connect/: route.ts
web/app/api/moltbook/status/: route.ts
web/app/api/parse/: route.ts
web/app/api/pick-thumbnails/: route.ts
web/app/api/pipeline-run/: route.ts
web/app/api/pipeline-train/: route.ts
web/app/api/providers/: route.ts
web/app/api/remove-fillers/: route.ts
web/app/api/render-clip/: route.ts
web/app/api/render-page/: route.ts
web/app/api/rewards/: route.ts
web/app/api/serve-clip/: route.ts
web/app/api/smart-crop/: route.ts
web/app/api/storage/connected/: route.ts
web/app/api/studio-chat/: route.ts
web/app/api/studio-library/: route.ts
web/app/api/studio-render/: route.ts
web/app/api/templates/: route.ts
web/app/api/top-prices/: route.ts
web/app/api/train-yolo/start/: route.ts
web/app/api/transcribe/: route.ts
web/app/api/upload-video/: route.ts
web/app/api/viral-clips/: route.ts
web/app/api/webhooks/clerk/: route.ts
web/app/api/webhooks/stripe/: route.ts
web/app/arena/: page.tsx
web/app/canvas/: page.tsx
web/app/canvas/live/: page.tsx
web/app/chat/: page.tsx
web/app/community/: page.tsx
web/app/community/[slug]/: page.tsx
web/app/connect/: page.tsx
web/app/crop/: page.tsx
web/app/crop-v2/: page.tsx  types.ts
web/app/crop-v2/components/: captions-panel.tsx  effects-panel.tsx  video-canvas.tsx
web/app/crop-v2/lib/: captions.ts  effects.ts
web/app/dashboard/: layout.tsx  page.tsx
web/app/dashboard/settings/: page.tsx
web/app/dashboard/usage/: page.tsx
web/app/deploy/: page.tsx
web/app/extract/: page.tsx
web/app/go/: page.tsx
web/app/how-it-works/: page.tsx
web/app/inspector/: page.tsx
web/app/label/: page.tsx
web/app/md/[[...slug]]/: route.ts
web/app/me/: page.tsx
web/app/parse/: page.tsx
web/app/pipeline/: page.tsx
web/app/play/: page.tsx
web/app/play/docs/: page.tsx
web/app/play/spin/: page.tsx
web/app/pricing/: page.tsx
web/app/pricing/scale/: page.tsx
web/app/sign-in/[[...sign-in]]/: page.tsx
web/app/sign-up/[[...sign-up]]/: page.tsx
web/app/studio/: animations.module.css  page.tsx  types.ts
web/app/subscribe/: page.tsx
web/app/template/[id]/: page.tsx
web/app/template/intake/: page.tsx
web/app/template/new/: page.tsx
web/app/train/: page.tsx
web/components/: BboxCanvas.tsx  BboxOverlay.tsx  CloudFilePicker.tsx  CountUp.tsx  HeroAnimation.tsx  RacingChart.tsx  ScoreChart.tsx  ScrollReveal.tsx  SiteFooter.tsx  SiteNav.tsx  WebMcpRegistrar.tsx  useScroll.ts
web/lib/: canvas-utils.ts  community-store.ts  dlf-api.ts  gateway-fetch.ts  iou-tracker.ts  plans.ts  r2.ts  storage-providers.ts  stripe.ts  types.ts
web/public/: llms.txt  robots.txt
web/public/.well-known/: a2a-agent-card.json  agent-card.json  oauth-authorization-server  oauth-protected-resource  web-mcp.json
worker-gateway/: package.json
(+10 files in other folders)
